--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav id="navbar">
             <div id="navcontent">  
                 <div class="logo">
-                    <img src="img/logo.jpg" alt="">
+                    <img src="img/logo.jpg" alt="logo">
                 </div>
             
                 <ul>
