--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <head>
     <title>Al-Aminfood</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+  />
 </head>
 
 
@@ -29,7 +33,7 @@
         </nav>
 
       <section class="sec0">
-
+              <DIV  class="animate__animated animate__flash"> <h1> UNDER CONSTRUCTION</h1>      </DIV> 
       </section>  
                             <!-------------------------->
      <!-------------------------- Four Picture Section ------------------ -->
